package hellgren.SOLID.liskov_substitution;

public interface Bird {
    void eat();
}
