package hellgren.SOLID.liskov_substitution;

public interface FlyingBird extends Bird {
    void fly();
}
